[package]
name = "py_ark_bls12_381"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_ark_bls12_381"
crate-type = ["cdylib"]

[dependencies]
num-bigint = "*"
pyo3 = { version = "0.17.3", features = ["extension-module", "num-bigint"] }
ark-bls12-381 = "0.4.0"
ark-ff = { version= "0.4.0", default-features = false }
